# personio-py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  api.html  changelog.html  codecov.yml  contributing.html  examples.html  genindex.html  guide.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py
.github/: pull_request_template.md
.github/workflows/: build.yml  coverage.yml  deploy.yml  docs-pr.yml  docs-publish.yml  python-package.yml  release.yml
_modules/: index.html
_modules/personio_py/: client.html  errors.html  mapping.html  models.html
_sources/: api.md.txt  changelog.md.txt  examples.md.txt  guide.md.txt
docs/source/: api.md  conf.py  contributing.md  examples.md  guide.md  index.md
src/personio_py/: __init__.py  __main__.py  cli.py  client.py  common.py  employees.py  errors.py  g.py  mapping.py  models.py  search.py  util.py  version.py
tests/: __init__.py  apitest_shared.py  connection.py  mock_data.py  test_absence.py  test_api.py  test_api_absences.py  test_api_attendances.py  test_api_employees.py  test_api_project.py  test_api_projects.py  test_api_raw.py  test_attendance.py  test_duration.py  test_employee.py  test_live_absence.py  test_live_api_raw.py  test_live_attendance.py  test_live_attendances.py  test_live_employee.py  test_live_project.py  test_main.py  test_mock.py  test_mock_absence.py  test_mock_api.py  test_mock_api_absence_data.py  test_mock_api_absences.py  test_mock_api_attendances.py  test_mock_api_attendances_data.py  test_mock_api_project.py  test_mock_attendance.py  test_mock_employee.py  test_mock_project.py  test_model.py  test_model_attendance.py  test_model_employee.py  test_project.py  test_search.py
tests/mock/: absence_data.py  absences_mock_functions.py
tests/res/: create-absence.json  create-attendance-no-break.json  create-employees.json  create-project.json  delete-absence.json  delete-project.json  get-absence-alan-many.json  get-absence-alan-one.json  get-absence-id.json  get-absence-types.json  get-attendance-rms.json  get-attendance.json  get-custom-attributes.json  get-employee-ada.json  get-employees.json  get-project.json  update-attendance.json  update-employee.json  update-project.json
